Source/Alternet.UI.Pal/Api/WebBrowser.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetPageText_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetPageText();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetAccessToDevToolsEnabled_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetAccessToDevToolsEnabled();
    });
}
ALTERNET_UI_API void WebBrowser_SetAccessToDevToolsEnabled_(WebBrowser* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetAccessToDevToolsEnabled(value);
    });
}
ALTERNET_UI_API int WebBrowser_GetPreferredColorScheme_(WebBrowser* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetPreferredColorScheme();
    });
}
ALTERNET_UI_API void WebBrowser_SetPreferredColorScheme_(WebBrowser* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetPreferredColorScheme(value);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetUserAgent_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetUserAgent();
    });
}
ALTERNET_UI_API void WebBrowser_SetUserAgent_(WebBrowser* obj, NativeStringSpan value)
{
    MarshalExceptions<void>([&](){
        obj->SetUserAgent(value);
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetContextMenuEnabled_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetContextMenuEnabled();
    });
}
ALTERNET_UI_API void WebBrowser_SetContextMenuEnabled_(WebBrowser* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetContextMenuEnabled(value);
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetEditable_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetEditable();
    });
}
ALTERNET_UI_API void WebBrowser_SetEditable_(WebBrowser* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetEditable(value);
    });
}
ALTERNET_UI_API int WebBrowser_GetZoom_(WebBrowser* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetZoom();
    });
}
ALTERNET_UI_API void WebBrowser_SetZoom_(WebBrowser* obj, int value)
{
    MarshalExceptions<void>([&](){
        obj->SetZoom(value);
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetIsEdge_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsEdge();
    });
}
ALTERNET_UI_API void* WebBrowser_CreateWebBrowser_(NativeStringSpan* url)
{
    return MarshalExceptions<void*>([&](){
        return WebBrowser::CreateWebBrowser(*url);
    });
}
ALTERNET_UI_API void WebBrowser_SetDefaultUserAgent_(NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetDefaultUserAgent(*value);
    });
}
ALTERNET_UI_API void WebBrowser_SetDefaultScriptMesageName_(NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetDefaultScriptMesageName(*value);
    });
}
ALTERNET_UI_API void WebBrowser_SetDefaultFSNameMemory_(NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetDefaultFSNameMemory(*value);
    });
}
ALTERNET_UI_API void WebBrowser_SetDefaultFSNameArchive_(NativeStringSpan* value)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetDefaultFSNameArchive(*value);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_DoCommand_(WebBrowser* obj, NativeStringSpan* cmdName, NativeStringSpan* cmdParam1, NativeStringSpan* cmdParam2)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->DoCommand(*cmdName, *cmdParam1, *cmdParam2);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_DoCommandGlobal_(NativeStringSpan* cmdName, NativeStringSpan* cmdParam1, NativeStringSpan* cmdParam2)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return WebBrowser::DoCommandGlobal(*cmdName, *cmdParam1, *cmdParam2);
    });
}
ALTERNET_UI_API void WebBrowser_SetVirtualHostNameToFolderMapping_(WebBrowser* obj, NativeStringSpan* hostName, NativeStringSpan* folderPath, int accessKind)
{
    MarshalExceptions<void>([&](){
        obj->SetVirtualHostNameToFolderMapping(*hostName, *folderPath, accessKind);
    });
}
ALTERNET_UI_API void* WebBrowser_GetNativeBackend_(WebBrowser* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetNativeBackend();
    });
}
ALTERNET_UI_API void WebBrowser_GoBack_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->GoBack();
    });
}
ALTERNET_UI_API void WebBrowser_GoForward_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->GoForward();
    });
}
ALTERNET_UI_API void WebBrowser_Stop_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Stop();
    });
}
ALTERNET_UI_API void WebBrowser_ClearSelection_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->ClearSelection();
    });
}
ALTERNET_UI_API void WebBrowser_Copy_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Copy();
    });
}
ALTERNET_UI_API void WebBrowser_Paste_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Paste();
    });
}
ALTERNET_UI_API void WebBrowser_Cut_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Cut();
    });
}
ALTERNET_UI_API void WebBrowser_ClearHistory_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->ClearHistory();
    });
}
ALTERNET_UI_API void WebBrowser_EnableHistory_(WebBrowser* obj, c_bool enable)
{
    MarshalExceptions<void>([&](){
        obj->EnableHistory(enable);
    });
}
ALTERNET_UI_API void WebBrowser_ReloadDefault_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->ReloadDefault();
    });
}
ALTERNET_UI_API void WebBrowser_Reload_(WebBrowser* obj, c_bool noCache)
{
    MarshalExceptions<void>([&](){
        obj->Reload(noCache);
    });
}
ALTERNET_UI_API void WebBrowser_SelectAll_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->SelectAll();
    });
}
ALTERNET_UI_API void WebBrowser_DeleteSelection_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->DeleteSelection();
    });
}
ALTERNET_UI_API void WebBrowser_Undo_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Undo();
    });
}
ALTERNET_UI_API void WebBrowser_Redo_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Redo();
    });
}
ALTERNET_UI_API void WebBrowser_Print_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Print();
    });
}
ALTERNET_UI_API void WebBrowser_RemoveAllUserScripts_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->RemoveAllUserScripts();
    });
}
ALTERNET_UI_API c_bool WebBrowser_AddScriptMessageHandler_(WebBrowser* obj, NativeStringSpan* name)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->AddScriptMessageHandler(*name);
    });
}
ALTERNET_UI_API c_bool WebBrowser_RemoveScriptMessageHandler_(WebBrowser* obj, NativeStringSpan* name)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->RemoveScriptMessageHandler(*name);
    });
}
ALTERNET_UI_API void WebBrowser_RunScriptAsync_(WebBrowser* obj, NativeStringSpan* javascript, void* clientData)
{
    MarshalExceptions<void>([&](){
        obj->RunScriptAsync(*javascript, clientData);
    });
}
ALTERNET_UI_API void WebBrowser_CreateBackend_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->CreateBackend();
    });
}
ALTERNET_UI_API int WebBrowser_GetBackendOS_()
{
    return MarshalExceptions<int>([&](){
        return WebBrowser::GetBackendOS();
    });
}
ALTERNET_UI_API void WebBrowser_SetEdgePath_(NativeStringSpan* path)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetEdgePath(*path);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetCurrentTitle_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetCurrentTitle();
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetCurrentURL_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetCurrentURL();
    });
}
ALTERNET_UI_API void WebBrowser_LoadURL_(WebBrowser* obj, NativeStringSpan* url)
{
    MarshalExceptions<void>([&](){
        obj->LoadURL(*url);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_RunScript_(WebBrowser* obj, NativeStringSpan* javascript)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->RunScript(*javascript);
    });
}
ALTERNET_UI_API void WebBrowser_SetPage_(WebBrowser* obj, NativeStringSpan* text, NativeStringSpan* baseUrl)
{
    MarshalExceptions<void>([&](){
        obj->SetPage(*text, *baseUrl);
    });
}
ALTERNET_UI_API c_bool WebBrowser_AddUserScript_(WebBrowser* obj, NativeStringSpan* javascript, int injectionTime)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->AddUserScript(*javascript, injectionTime);
    });
}