Source/Alternet.UI/Native/WebBrowser.Generated.cs

            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetPageText_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetAccessToDevToolsEnabled_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetAccessToDevToolsEnabled_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int WebBrowser_GetPreferredColorScheme_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetPreferredColorScheme_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetUserAgent_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetUserAgent_(IntPtr obj, Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetContextMenuEnabled_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetContextMenuEnabled_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetEditable_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetEditable_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int WebBrowser_GetZoom_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetZoom_(IntPtr obj, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetIsEdge_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr WebBrowser_CreateWebBrowser_(ref Alternet.UI.NativeStringSpan url);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetDefaultUserAgent_(ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetDefaultScriptMesageName_(ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetDefaultFSNameMemory_(ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetDefaultFSNameArchive_(ref Alternet.UI.NativeStringSpan value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_DoCommand_(IntPtr obj, ref Alternet.UI.NativeStringSpan cmdName, ref Alternet.UI.NativeStringSpan cmdParam1, ref Alternet.UI.NativeStringSpan cmdParam2);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_DoCommandGlobal_(ref Alternet.UI.NativeStringSpan cmdName, ref Alternet.UI.NativeStringSpan cmdParam1, ref Alternet.UI.NativeStringSpan cmdParam2);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetVirtualHostNameToFolderMapping_(IntPtr obj, ref Alternet.UI.NativeStringSpan hostName, ref Alternet.UI.NativeStringSpan folderPath, int accessKind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr WebBrowser_GetNativeBackend_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_GoBack_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_GoForward_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Stop_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_ClearSelection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Copy_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Paste_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Cut_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_ClearHistory_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_EnableHistory_(IntPtr obj, bool enable);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_ReloadDefault_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Reload_(IntPtr obj, bool noCache);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SelectAll_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_DeleteSelection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Undo_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Redo_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_Print_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_RemoveAllUserScripts_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_AddScriptMessageHandler_(IntPtr obj, ref Alternet.UI.NativeStringSpan name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_RemoveScriptMessageHandler_(IntPtr obj, ref Alternet.UI.NativeStringSpan name);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_RunScriptAsync_(IntPtr obj, ref Alternet.UI.NativeStringSpan javascript, System.IntPtr clientData);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_CreateBackend_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int WebBrowser_GetBackendOS_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetEdgePath_(ref Alternet.UI.NativeStringSpan path);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetCurrentTitle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetCurrentURL_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_LoadURL_(IntPtr obj, ref Alternet.UI.NativeStringSpan url);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_RunScript_(IntPtr obj, ref Alternet.UI.NativeStringSpan javascript);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetPage_(IntPtr obj, ref Alternet.UI.NativeStringSpan text, ref Alternet.UI.NativeStringSpan baseUrl);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_AddUserScript_(IntPtr obj, ref Alternet.UI.NativeStringSpan javascript, int injectionTime);
            
        }
    }
}
